--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -25,13 +25,13 @@ scrolling:
 
 font:
   normal:
-    family: Fira Code
+    family: Source Code Pro
   bold:
-    family: Fira Code
+    family: Source Code Pro
   italic:
-    family: Fira Code
+    family: Source Code Pro
   bold_italic:
-    family: Fira Code
+    family: Source Code Pro
   size: 12.0
 
 draw_bold_text_with_bright_colors: false
